# async-nookipedia

./: README.md  pyproject.toml  test.py
docs/: api.rst  conf.py  index.rst  modules.rst  nookipedia.api.rst  nookipedia.models.rst  nookipedia.rst  requirements.txt
nookipedia/: __init__.py  nookipedia.py
nookipedia/api/: __init__.py  api.py  cached_api.py
nookipedia/models/: __init__.py  bug.py  cached_object.py  common.py  critter.py  fish.py  fossil.py  villager.py
