[tool.poetry]
name = "async-nookipedia"
version = "0.1.1"
description = "async API wrapper for Nookipedia API written in python"
authors = ["makubob <makupi@icloud.com>"]
license = "GPL-3.0"
packages = [{include = "nookipedia"}]
readme = "README.md"
repository = "https://github.com/makupi/async-nookipedia"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6.2"
importlib_metadata = "^1.6.0"
python-dateutil = "^2.8.1"
sphinx = "^3.0.3"
pydantic = "^1.8.1"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.13.0"
sphinx = "^3.0.3"
autodoc = "^0.5.0"
Flask-Sphinx-Themes = "^1.0.2"
sphinxcontrib-napoleon = "^0.7"
pygments = "^2.6.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
